Update content and fix bottom clipping

--- a/app/_scss/partials/_post.scss
+++ b/app/_scss/partials/_post.scss
@@ -5,7 +5,7 @@
 .post{
   width: 100%;
   margin: 0 auto;
-  margin-bottom: 1rem;
+  padding-bottom: 4rem;
 
   p,
   h1,
